windows users/y.output
Terminals unused in grammar

   FALSE
   TRUE
   AND
   ASSERT
   ASYNC
   AWAIT
   ELSE
   EXCEPT
   FINALY
   IS
   LAMBDA
   NOT
   NONE
   OR
   TRY
   WHILE
   WITH
   LBRACKET
   RBRACKET
   LBRACE
   RBRACE
   SEMICOLON
   LOWERCASE
   NUM
   LETTER
   KATWPAVLA
   QUOTE
   DIGIT
   SINISON
   PLINISON


State 111 conflicts: 2 shift/reduce
State 126 conflicts: 2 shift/reduce
State 127 conflicts: 2 shift/reduce
State 128 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce, 37 reduce/reduce
State 161 conflicts: 2 shift/reduce
State 162 conflicts: 1 shift/reduce
State 163 conflicts: 1 shift/reduce
State 168 conflicts: 1 shift/reduce
State 202 conflicts: 1 shift/reduce
State 230 conflicts: 13 shift/reduce
State 284 conflicts: 2 shift/reduce
State 293 conflicts: 2 shift/reduce
State 295 conflicts: 1 shift/reduce


Grammar

    0 $accept: programm $end

    1 programm: /* empty */
    2         | atom programm
    3         | classi programm
    4         | function programm

    5 atom: IDENTIFIER
    6     | literal
    7     | enclosure

    8 literal: stringliteral
    9        | INTEGER
   10        | FLOATNUMBER
   11        | IMAGINUMBER

   12 stringliteral: stringprefixShort
   13              | stringprefixLong

   14 stringprefixShort: r SHORTSTRING
   15                  | u SHORTSTRING
   16                  | R SHORTSTRING
   17                  | U SHORTSTRING
   18                  | f SHORTSTRING
   19                  | F SHORTSTRING
   20                  | fr SHORTSTRING
   21                  | Fr SHORTSTRING
   22                  | fR SHORTSTRING
   23                  | FR SHORTSTRING
   24                  | rf SHORTSTRING
   25                  | rF SHORTSTRING
   26                  | Rf SHORTSTRING
   27                  | RF SHORTSTRING

   28 stringprefixLong: r LONGSTRING
   29                 | u LONGSTRING
   30                 | R LONGSTRING
   31                 | U LONGSTRING
   32                 | f LONGSTRING
   33                 | F LONGSTRING
   34                 | fr LONGSTRING
   35                 | Fr LONGSTRING
   36                 | fR LONGSTRING
   37                 | FR LONGSTRING
   38                 | rf LONGSTRING
   39                 | rF LONGSTRING
   40                 | Rf LONGSTRING
   41                 | RF LONGSTRING

   42 enclosure: parenth_form
   43          | list_display
   44          | set_display
   45          | dict_display

   46 parenth_form: LEFTBRACKET RIGHTBRACKET
   47             | LEFTBRACKET IDENTIFIER RIGHTBRACKET
   48             | LEFTBRACKET comprehension RIGHTBRACKET

   49 list_display: LSQUAREBRACKET RSQUAREBRACKET
   50             | LSQUAREBRACKET IDENTIFIER RSQUAREBRACKET
   51             | LSQUAREBRACKET comprehension RSQUAREBRACKET

   52 set_display: CURLLEFT CURLRIGHT
   53            | CURLLEFT IDENTIFIER CURLRIGHT
   54            | CURLLEFT comprehension CURLRIGHT

   55 dict_display: IDENTIFIER ISON CURLLEFT CURLRIGHT
   56             | IDENTIFIER ISON CURLLEFT dictindex CURLRIGHT

   57 dictindex: IDENTIFIER ANWKATWTELEIA IDENTIFIER
   58          | dictindex KOMMA IDENTIFIER ANWKATWTELEIA IDENTIFIER

   59 comprehension: IDENTIFIER FOR IDENTIFIER IN IDENTIFIER FOR IDENTIFIER IN IDENTIFIER
   60              | IDENTIFIER PLUS IDENTIFIER FOR IDENTIFIER IN IDENTIFIER FOR IDENTIFIER IN IDENTIFIER
   61              | IDENTIFIER MINUS IDENTIFIER FOR IDENTIFIER IN IDENTIFIER FOR IDENTIFIER IN IDENTIFIER
   62              | IDENTIFIER MUL IDENTIFIER FOR IDENTIFIER IN IDENTIFIER FOR IDENTIFIER IN IDENTIFIER
   63              | IDENTIFIER DIVISION IDENTIFIER FOR IDENTIFIER IN IDENTIFIER FOR IDENTIFIER IN IDENTIFIER

   64 simple_statements: statements
   65                  | simple_statements statements
   66                  | pass_stm
   67                  | del_stmt
   68                  | return_stmt
   69                  | yield_stmt
   70                  | raise_stmt
   71                  | break_stmt
   72                  | continue_stmt
   73                  | import_stmt
   74                  | global_stmt
   75                  | nonlocal_stmt

   76 statements: expression_statement
   77           | assignment_statment

   78 expression_statement: PRINT LEFTBRACKET DOUBLEQUOTE protash DOUBLEQUOTE RIGHTBRACKET
   79                     | PRINT FLOATNUMBER

   80 protash: IDENTIFIER
   81        | protash IDENTIFIER

   82 assignment_statment: IDENTIFIER ISON FLOATNUMBER
   83                    | IDENTIFIER ISON IMAGINUMBER
   84                    | IDENTIFIER ISON INTEGER
   85                    | IDENTIFIER ISON IDENTIFIER
   86                    | augmented_assignment_stmt

   87 augmented_assignment_stmt: IDENTIFIER PLUS ISON IDENTIFIER
   88                          | IDENTIFIER MINUS ISON IDENTIFIER

   89 pass_stm: PASS

   90 del_stmt: DEL IDENTIFIER
   91         | DEL LEFTBRACKET IDENTIFIER RIGHTBRACKET
   92         | DEL LSQUAREBRACKET IDENTIFIER RSQUAREBRACKET

   93 return_stmt: RETURN IDENTIFIER

   94 yield_stmt: YIELD IDENTIFIER
   95           | YIELD FROM IDENTIFIER

   96 raise_stmt: RAISE IDENTIFIER FROM IDENTIFIER
   97           | RAISE IDENTIFIER LEFTBRACKET DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE RIGHTBRACKET FROM IDENTIFIER

   98 break_stmt: BREAK

   99 continue_stmt: CONTINUE

  100 import_stmt: IMPORT IDENTIFIER
  101            | IMPORT module
  102            | FROM module IMPORT IDENTIFIER
  103            | IMPORT module AS IDENTIFIER

  104 module: IDENTIFIER
  105       | IDENTIFIER TELEIA IDENTIFIER
  106       | module TELEIA IDENTIFIER

  107 global_stmt: GLOBAL IDENTIFIER
  108            | GLOBAL IDENTIFIER synexeia_ekfrashs

  109 synexeia_ekfrashs: KOMMA IDENTIFIER
  110                  | synexeia_ekfrashs KOMMA IDENTIFIER

  111 nonlocal_stmt: NONLOCAL IDENTIFIER
  112              | NONLOCAL IDENTIFIER synexeia_ekfrashs

  113 stmt_list: simple_statements
  114          | stmt_list simple_statements

  115 if_stm: IF IDENTIFIER sygrites IDENTIFIER ANWKATWTELEIA expression_statement
  116       | IF IDENTIFIER sygrites IDENTIFIER ANWKATWTELEIA expression_statement ELIF IDENTIFIER sygrites IDENTIFIER ANWKATWTELEIA expression_statement

  117 sygrites: ISON ISON
  118         | MEGALUTERO
  119         | MIKROTERO
  120         | DIAFORO

  121 for_stm: FOR IDENTIFIER IN IDENTIFIER ANWKATWTELEIA expression_statement
  122        | FOR IDENTIFIER IN IDENTIFIER ANWKATWTELEIA if_stm

  123 constructor: defconstructor
  124            | parameterizedconstructor
  125            | defconstructor parameterizedconstructor
  126            | constructor defconstructor
  127            | constructor parameterizedconstructor

  128 defconstructor: DEF INIT LEFTBRACKET IDENTIFIER RIGHTBRACKET ANWKATWTELEIA swmaconstr

  129 parameterizedconstructor: DEF IDENTIFIER LEFTBRACKET IDENTIFIER RIGHTBRACKET swmaconstr
  130                         | DEF IDENTIFIER LEFTBRACKET IDENTIFIER synexeia_ekfrashs RIGHTBRACKET ANWKATWTELEIA recursive_swmaconstr
  131                         | DEF IDENTIFIER LEFTBRACKET IDENTIFIER synexeia_ekfrashs RIGHTBRACKET ANWKATWTELEIA recursive_swmaconstr object
  132                         | DEF IDENTIFIER LEFTBRACKET IDENTIFIER synexeia_ekfrashs RIGHTBRACKET ANWKATWTELEIA recursive_swmaconstr function
  133                         | DEF IDENTIFIER LEFTBRACKET IDENTIFIER synexeia_ekfrashs RIGHTBRACKET ANWKATWTELEIA recursive_swmaconstr object function

  134 swmaconstr: module ISON DOUBLEQUOTE IDENTIFIER DOUBLEQUOTE
  135           | module ISON IDENTIFIER

  136 recursive_swmaconstr: swmaconstr
  137                     | recursive_swmaconstr swmaconstr

  138 object: IDENTIFIER ISON IDENTIFIER LEFTBRACKET IDENTIFIER RIGHTBRACKET
  139       | IDENTIFIER ISON IDENTIFIER LEFTBRACKET IDENTIFIER synexeia_ekfrashs RIGHTBRACKET

  140 function: DEF IDENTIFIER LEFTBRACKET IDENTIFIER RIGHTBRACKET ANWKATWTELEIA stmt_list

  141 classi: CLASS IDENTIFIER ANWKATWTELEIA stmt_list
  142       | CLASS IDENTIFIER ANWKATWTELEIA constructor
  143       | CLASS IDENTIFIER ANWKATWTELEIA stmt_list constructor
  144       | CLASS IDENTIFIER ANWKATWTELEIA constructor stmt_list
  145       | CLASS IDENTIFIER klhronomikothta ANWKATWTELEIA stmt_list
  146       | CLASS IDENTIFIER klhronomikothta ANWKATWTELEIA constructor stmt_list
  147       | CLASS IDENTIFIER ANWKATWTELEIA stmt_list constructor if_stm
  148       | CLASS IDENTIFIER ANWKATWTELEIA stmt_list constructor if_stm for_stm

  149 klhronomikothta: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
FALSE (258)
TRUE (259)
AND (260)
ASSERT (261)
ASYNC (262)
AWAIT (263)
BREAK (264) 98
CLASS (265) 141 142 143 144 145 146 147 148
CONTINUE (266) 99
DEF (267) 128 129 130 131 132 133 140
DEL (268) 90 91 92
ELIF (269) 116
ELSE (270)
EXCEPT (271)
FINALY (272)
FOR (273) 59 60 61 62 63 121 122
FROM (274) 95 96 97 102
GLOBAL (275) 107 108
IF (276) 115 116
IMPORT (277) 100 101 102 103
IN (278) 59 60 61 62 63 121 122
IS (279)
LAMBDA (280)
NONLOCAL (281) 111 112
NOT (282)
NONE (283)
OR (284)
PASS (285) 89
RAISE (286) 96 97
RETURN (287) 93
TRY (288)
WHILE (289)
WITH (290)
YIELD (291) 94 95
LBRACKET (292)
RBRACKET (293)
LBRACE (294)
RBRACE (295)
SEMICOLON (296)
LOWERCASE (297)
NUM (298)
LETTER (299)
KATWPAVLA (300)
QUOTE (301)
DOUBLEQUOTE (302) 78 97 134
DIGIT (303)
r (304) 14 28
u (305) 15 29
R (306) 16 30
U (307) 17 31
f (308) 18 32
F (309) 19 33
fr (310) 20 34
Fr (311) 21 35
fR (312) 22 36
FR (313) 23 37
rf (314) 24 38
Rf (315) 26 40
rF (316) 25 39
RF (317) 27 41
SHORTSTRING (318) 14 15 16 17 18 19 20 21 22 23 24 25 26 27
LONGSTRING (319) 28 29 30 31 32 33 34 35 36 37 38 39 40 41
IDENTIFIER (320) 5 47 50 53 55 56 57 58 59 60 61 62 63 80 81 82 83
    84 85 87 88 90 91 92 93 94 95 96 97 100 102 103 104 105 106 107
    108 109 110 111 112 115 116 121 122 128 129 130 131 132 133 134
    135 138 139 140 141 142 143 144 145 146 147 148 149
INTEGER (321) 9 84
FLOATNUMBER (322) 10 79 82
IMAGINUMBER (323) 11 83
LEFTBRACKET (324) 46 47 48 78 91 97 128 129 130 131 132 133 138 139
    140
RIGHTBRACKET (325) 46 47 48 78 91 97 128 129 130 131 132 133 138 139
    140
LSQUAREBRACKET (326) 49 50 51 92
RSQUAREBRACKET (327) 49 50 51 92
CURLLEFT (328) 52 53 54 55 56
CURLRIGHT (329) 52 53 54 55 56
PLUS (330) 60 87
MUL (331) 62
DIVISION (332) 63
MINUS (333) 61 88
ISON (334) 55 56 82 83 84 85 87 88 117 134 135 138 139
KOMMA (335) 58 109 110
ANWKATWTELEIA (336) 57 58 115 116 121 122 128 130 131 132 133 140 141
    142 143 144 145 146 147 148
PRINT (337) 78 79
SINISON (338)
PLINISON (339)
TELEIA (340) 105 106
AS (341) 103
INIT (342) 128
MEGALUTERO (343) 118
MIKROTERO (344) 119
DIAFORO (345) 120


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
programm (92)
    on left: 1 2 3 4, on right: 0 2 3 4
atom (93)
    on left: 5 6 7, on right: 2
literal (94)
    on left: 8 9 10 11, on right: 6
stringliteral (95)
    on left: 12 13, on right: 8
stringprefixShort (96)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27, on right: 12
stringprefixLong (97)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41, on right: 13
enclosure (98)
    on left: 42 43 44 45, on right: 7
parenth_form (99)
    on left: 46 47 48, on right: 42
list_display (100)
    on left: 49 50 51, on right: 43
set_display (101)
    on left: 52 53 54, on right: 44
dict_display (102)
    on left: 55 56, on right: 45
dictindex (103)
    on left: 57 58, on right: 56 58
comprehension (104)
    on left: 59 60 61 62 63, on right: 48 51 54
simple_statements (105)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75, on right: 65 113
    114
statements (106)
    on left: 76 77, on right: 64 65
expression_statement (107)
    on left: 78 79, on right: 76 115 116 121
protash (108)
    on left: 80 81, on right: 78 81
assignment_statment (109)
    on left: 82 83 84 85 86, on right: 77
augmented_assignment_stmt (110)
    on left: 87 88, on right: 86
pass_stm (111)
    on left: 89, on right: 66
del_stmt (112)
    on left: 90 91 92, on right: 67
return_stmt (113)
    on left: 93, on right: 68
yield_stmt (114)
    on left: 94 95, on right: 69
raise_stmt (115)
    on left: 96 97, on right: 70
break_stmt (116)
    on left: 98, on right: 71
continue_stmt (117)
    on left: 99, on right: 72
import_stmt (118)
    on left: 100 101 102 103, on right: 73
module (119)
    on left: 104 105 106, on right: 101 102 103 106 134 135
global_stmt (120)
    on left: 107 108, on right: 74
synexeia_ekfrashs (121)
    on left: 109 110, on right: 108 110 112 130 131 132 133 139
nonlocal_stmt (122)
    on left: 111 112, on right: 75
stmt_list (123)
    on left: 113 114, on right: 114 140 141 143 144 145 146 147 148
if_stm (124)
    on left: 115 116, on right: 122 147 148
sygrites (125)
    on left: 117 118 119 120, on right: 115 116
for_stm (126)
    on left: 121 122, on right: 148
constructor (127)
    on left: 123 124 125 126 127, on right: 126 127 142 143 144 146
    147 148
defconstructor (128)
    on left: 128, on right: 123 125 126
parameterizedconstructor (129)
    on left: 129 130 131 132 133, on right: 124 125 127
swmaconstr (130)
    on left: 134 135, on right: 128 129 136 137
recursive_swmaconstr (131)
    on left: 136 137, on right: 130 131 132 133 137
object (132)
    on left: 138 139, on right: 131 133
function (133)
    on left: 140, on right: 4 132 133
classi (134)
    on left: 141 142 143 144 145 146 147 148, on right: 3
klhronomikothta (135)
    on left: 149, on right: 145 146


State 0

    0 $accept: . programm $end

    CLASS           shift, and go to state 1
    DEF             shift, and go to state 2
    r               shift, and go to state 3
    u               shift, and go to state 4
    R               shift, and go to state 5
    U               shift, and go to state 6
    f               shift, and go to state 7
    F               shift, and go to state 8
    fr              shift, and go to state 9
    Fr              shift, and go to state 10
    fR              shift, and go to state 11
    FR              shift, and go to state 12
    rf              shift, and go to state 13
    Rf              shift, and go to state 14
    rF              shift, and go to state 15
    RF              shift, and go to state 16
    IDENTIFIER      shift, and go to state 17
    INTEGER         shift, and go to state 18
    FLOATNUMBER     shift, and go to state 19
    IMAGINUMBER     shift, and go to state 20
    LEFTBRACKET     shift, and go to state 21
    LSQUAREBRACKET  shift, and go to state 22
    CURLLEFT        shift, and go to state 23

    $default  reduce using rule 1 (programm)

    programm           go to state 24
    atom               go to state 25
    literal            go to state 26
    stringliteral      go to state 27
    stringprefixShort  go to state 28
    stringprefixLong   go to state 29
    enclosure          go to state 30
    parenth_form       go to state 31
    list_display       go to state 32
    set_display        go to state 33
    dict_display       go to state 34
    function           go to state 35
    classi             go to state 36


State 1

  141 classi: CLASS . IDENTIFIER ANWKATWTELEIA stmt_list
  142       | CLASS . IDENTIFIER ANWKATWTELEIA constructor
  143       | CLASS . IDENTIFIER ANWKATWTELEIA stmt_list constructor
  144       | CLASS . IDENTIFIER ANWKATWTELEIA constructor stmt_list
  145       | CLASS . IDENTIFIER klhronomikothta ANWKATWTELEIA stmt_list
  146       | CLASS . IDENTIFIER klhronomikothta ANWKATWTELEIA constructor stmt_list
  147       | CLASS . IDENTIFIER ANWKATWTELEIA stmt_list constructor if_stm
  148       | CLASS . IDENTIFIER ANWKATWTELEIA stmt_list constructor if_stm for_stm

    IDENTIFIER  shift, and go to state 37


State 2

  140 function: DEF . IDENTIFIER LEFTBRACKET IDENTIFIER RIGHTBRACKET ANWKATWTELEIA stmt_list

    IDENTIFIER  shift, and go to state 38


State 3

   14 stringprefixShort: r . SHORTSTRING
   28 stringprefixLong: r . LONGSTRING

    SHORTSTRING  shift, and go to state 39
    LONGSTRING   shift, and go to state 40


State 4

   15 stringprefixShort: u . SHORTSTRING
   29 stringprefixLong: u . LONGSTRING

    SHORTSTRING  shift, and go to state 41
    LONGSTRING   shift, and go to state 42


State 5

   16 stringprefixShort: R . SHORTSTRING
   30 stringprefixLong: R . LONGSTRING

    SHORTSTRING  shift, and go to state 43
    LONGSTRING   shift, and go to state 44


State 6

   17 stringprefixShort: U . SHORTSTRING
   31 stringprefixLong: U . LONGSTRING

    SHORTSTRING  shift, and go to state 45
    LONGSTRING   shift, and go to state 46


State 7

   18 stringprefixShort: f . SHORTSTRING
   32 stringprefixLong: f . LONGSTRING

    SHORTSTRING  shift, and go to state 47
    LONGSTRING   shift, and go to state 48


State 8

   19 stringprefixShort: F . SHORTSTRING
   33 stringprefixLong: F . LONGSTRING

    SHORTSTRING  shift, and go to state 49
    LONGSTRING   shift, and go to state 50


State 9

   20 stringprefixShort: fr . SHORTSTRING
   34 stringprefixLong: fr . LONGSTRING

    SHORTSTRING  shift, and go to state 51
    LONGSTRING   shift, and go to state 52


State 10

   21 stringprefixShort: Fr . SHORTSTRING
   35 stringprefixLong: Fr . LONGSTRING

    SHORTSTRING  shift, and go to state 53
    LONGSTRING   shift, and go to state 54


State 11

   22 stringprefixShort: fR . SHORTSTRING
   36 stringprefixLong: fR . LONGSTRING

    SHORTSTRING  shift, and go to state 55
    LONGSTRING   shift, and go to state 56


State 12

   23 stringprefixShort: FR . SHORTSTRING
   37 stringprefixLong: FR . LONGSTRING

    SHORTSTRING  shift, and go to state 57
    LONGSTRING   shift, and go to state 58


State 13

   24 stringprefixShort: rf . SHORTSTRING
   38 stringprefixLong: rf . LONGSTRING

    SHORTSTRING  shift, and go to state 59
    LONGSTRING   shift, and go to state 60


State 14

   26 stringprefixShort: Rf . SHORTSTRING
   40 stringprefixLong: Rf . LONGSTRING

    SHORTSTRING  shift, and go to state 61
    LONGSTRING   shift, and go to state 62


State 15

   25 stringprefixShort: rF . SHORTSTRING
   39 stringprefixLong: rF . LONGSTRING

    SHORTSTRING  shift, and go to state 63
    LONGSTRING   shift, and go to state 64


State 16

   27 stringprefixShort: RF . SHORTSTRING
   41 stringprefixLong: RF . LONGSTRING

    SHORTSTRING  shift, and go to state 65
    LONGSTRING   shift, and go to state 66


State 17

    5 atom: IDENTIFIER .
